src/objects/Job_Industry__c.object
<CustomObject>
    <fields>
        <fullName>Industry_Name__c</fullName>
        <formula>Industry__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Industry Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry_Sensis_Category_ID__c</fullName>
        <formula>Industry__r.Sensis_Category_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Industry Sensis Category ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <label>Industry</label>
        <referenceTo>Industry__c</referenceTo>
        <relationshipLabel>Job Industries</relationshipLabel>
        <relationshipName>Job_Industries</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Job_Name__c</fullName>
        <formula>Job__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job__c</fullName>
        <label>Job</label>
        <referenceTo>Job__c</referenceTo>
        <relationshipLabel>Job Industries</relationshipLabel>
        <relationshipName>Job_Industries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Job Industry</label>
    <nameField>
        <displayFormat>JI{0}</displayFormat>
        <label>Job Industry Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Industries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>